# moonlight

./: README.md  cabal.project  workspace.josh
melusine-nebula/: melusine-nebula.cabal
melusine-nebula/app/: Main.hs
melusine-nebula/bench-caselift/: Main.hs
melusine-nebula/bench-caselift/Bench/: CaseLift.hs
melusine-nebula/bench-pipeline/app/: PipelineMain.hs
melusine-nebula/bench-pipeline/fixtures/: Composite.hs
melusine-nebula/corpus/: Cache.hs  FiniteMeet.hs  Gate.hs  Render.hs  Symmetric.hs  baseline.json
melusine-nebula/corpus-probes/: ProbeA.hs  ProbeB.hs  ProbeC.hs  ProbeD.hs  ProbeE.hs  ProbeF.hs  ProbeG.hs  ProbeH.hs  ProbeI.hs  ProbeJ.hs  ProbeK.hs  ProbeL.hs  ProbeM.hs  ProbeN.hs  ProbeO.hs  baseline.json
melusine-nebula/src/Melusine/: Nebula.hs
melusine-nebula/test/: Main.hs
moonlight-algebra/: README.md  moonlight-algebra.cabal
moonlight-algebra/bench/abstract/: AbstractBench.hs  Main.hs
moonlight-algebra/bench/aggregate/: Main.hs
moonlight-algebra/bench/finite-lattice/: Atomic.hs  Finite.hs  FiniteLatticeBench.hs  Fixtures.hs  JoinMeet.hs  Kernels.hs  Main.hs  Rows.hs  Support.hs  Tableless.hs
moonlight-algebra/negative-finite-lattice/: ResidentBrandMustNotCompile.hs
moonlight-algebra/src-finite-lattice/Moonlight/: FiniteLattice.hs
moonlight-algebra/src-public/Moonlight/: Algebra.hs
moonlight-algebra/test/abstract/: AbstractTests.hs  Main.hs  OrderedLatticeSpec.hs  SparseVecSpec.hs
moonlight-algebra/test/aggregate/: Main.hs
moonlight-algebra/test/finite-lattice/: FiniteLatticeSpec.hs  FiniteLatticeTests.hs  LawSpec.hs  Main.hs  PresentationSpec.hs
moonlight-analysis/: README.md  moonlight-analysis.cabal
moonlight-analysis/src/Moonlight/: Analysis.hs
moonlight-analysis/test/: Main.hs
moonlight-category/: README.md  THIRD_PARTY_NOTICES.md  moonlight-category.cabal
moonlight-category/bench/abstract/: AbstractBench.hs  AbstractFixtures.hs  Covering.hs  Main.hs
moonlight-category/bench/aggregate/: Main.hs
moonlight-category/bench/finite/: FinCat.hs  FiniteBench.hs  Invertibility.hs  Main.hs
moonlight-category/bench/indexed/: IndexedBench.hs  Main.hs  Simplex.hs
moonlight-category/bench/simplicial/: Main.hs  SimplicialBench.hs  SimplicialDelta.hs  SimplicialNerve.hs  SimplicialSpaces.hs  SimplicialWeight.hs
moonlight-category/bench/site/: Main.hs  SiteBench.hs  SiteCases.hs  SiteManifest.hs  SitePathQuotient.hs
moonlight-category/bench/support/: BenchSupport.hs
moonlight-category/src-public/Moonlight/: Category.hs
moonlight-category/test/abstract/: Main.hs  (+7 more)
moonlight-control/: README.md  moonlight-control.cabal
moonlight-control/bench/: Main.hs
moonlight-control/test/: CoreMain.hs  Main.hs
moonlight-core/: LICENSE  README.md  moonlight-core.cabal
moonlight-delta/: README.md  moonlight-delta.cabal
moonlight-delta/test-support/: DeltaLaws.hs  LawManifest.hs  PatchReference.hs
moonlight-derived/: README.md  THIRD_PARTY_NOTICES.md  moonlight-derived.cabal
moonlight-derived/bench/: DescAnchorMain.hs  Main.hs  ProbeMain.hs
moonlight-derived/test/: Main.hs
moonlight-derived/test-public/: Main.hs
moonlight-differential/: README.md  THIRD_PARTY_NOTICES.md  moonlight-differential.cabal
moonlight-differential/bench/: Main.hs
moonlight-differential/negative-circuit/: CircuitHandleRolesMustNotCompile.hs
moonlight-differential/negative-join/: DenseTriangleTrieMustNotBeGeneric.hs
moonlight-differential/test/: Main.hs
moonlight-discrete/: README.md  moonlight-discrete.cabal
moonlight-egraph/: README.md  moonlight-egraph.cabal
moonlight-egraph-core/: moonlight-egraph-core.cabal
moonlight-egraph-fuzzy/: moonlight-egraph-fuzzy.cabal
moonlight-egraph-fuzzy/test/: Main.hs
moonlight-egraph-introspection/: moonlight-egraph-introspection.cabal
moonlight-egraph-introspection/app/: HsExprInsertionMetricsMain.hs
moonlight-egraph-introspection/test/: Main.hs
moonlight-egraph-saturation/: README.md  moonlight-egraph-saturation.cabal
moonlight-egraph-saturation/bench/: Main.hs
moonlight-egraph-saturation/test/: Main.hs
moonlight-egraph/baselines/: ProductBaselineMain.hs
moonlight-egraph/figures/: ObstructionFiguresMain.hs
moonlight-flow-bench/: moonlight-flow-bench.cabal
moonlight-flow-bench/runtime/: RbacLocalityCheckMain.hs  RbacReproducerMain.hs  RbacSetupProbeMain.hs  RbacTargetedSoakMain.hs
moonlight-flow-carrier/: moonlight-flow-carrier.cabal
moonlight-flow-carrier-reuse/: moonlight-flow-carrier-reuse.cabal
moonlight-flow-carrier-reuse/test/: Main.hs
moonlight-flow-carrier/test/: Main.hs
moonlight-flow-execution/: moonlight-flow-execution.cabal
moonlight-flow-key/: moonlight-flow-key.cabal
moonlight-flow-model/: moonlight-flow-model.cabal
moonlight-flow-plan/: moonlight-flow-plan.cabal
moonlight-flow-plan-rewrite/: moonlight-flow-plan-rewrite.cabal
moonlight-flow-rbac-fixture/: moonlight-flow-rbac-fixture.cabal
moonlight-flow-rbac-fixture/app/: RbacRuntimeDataflowFixture.hs  RbacRuntimeDataflowStream.hs
moonlight-flow-runtime/: moonlight-flow-runtime.cabal
moonlight-flow-runtime/test-internal/: Main.hs
moonlight-flow-storage/: moonlight-flow-storage.cabal
moonlight-flow-test-support/: moonlight-flow-test-support.cabal
moonlight-flow-test-support/test/: Main.hs
moonlight-flow-test-support/test-carrier/: Main.hs
moonlight-flow-test-support/test-model/: Main.hs
moonlight-flow-test-support/test-plan/: Main.hs
moonlight-flow-test-support/test-runtime/: Main.hs
moonlight-flow-test-support/test-sheaf-relational/: Main.hs
moonlight-flow-test-support/test-storage/: Main.hs
moonlight-geometry/: moonlight-geometry.cabal
moonlight-geometry/test/: Main.hs
moonlight-homology/: README.md  THIRD_PARTY_NOTICES.md  moonlight-homology.cabal
moonlight-homology/bench/: Main.hs
moonlight-homology/test/: Main.hs
moonlight-linalg/: README.md  THIRD_PARTY_NOTICES.md  moonlight-linalg.cabal
moonlight-linalg/bench/: Main.hs
moonlight-linalg/cbits/: moonlight_linalg_native.c
moonlight-linalg/test/: Main.hs
moonlight-linalg/test-laws/: Main.hs
(+2703 files in other folders)
